# twists-and-turns

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
res/shaders/: flash.fs
src/: game_state.hpp  globals.hpp  main.cpp
src/blueprints/: particles.hpp
src/core/: animation_player.hpp  asset_manager.cpp  asset_manager.hpp  camera.hpp  collision.hpp  data.hpp  delta_time.hpp  entity_pool.hpp  gui.cpp  gui.hpp  health.cpp  health.hpp  input.hpp  key.hpp  key_maps.hpp  particles.hpp  random.hpp  renderer.hpp  sound.hpp  transform.hpp
src/entities/: door.hpp  enemy.hpp  grid_element.hpp  player.hpp  spike.hpp  wall.hpp
src/level/: level_loader.cpp  level_loader.hpp
src/scenes/: controls_scene.cpp  controls_scene.hpp  game_over_scene.cpp  game_over_scene.hpp  game_scene.cpp  game_scene.hpp  pause_scene.cpp  pause_scene.hpp
src/systems/: chunk_system.cpp  chunk_system.hpp  enemy_system.cpp  enemy_system.hpp  player_system.cpp  player_system.hpp  scene_manager.cpp  scene_manager.hpp
